# cpp-vscode-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
.devcontainer/: devcontainer.json
test/: CMakeLists.txt
